generated/checker-for-evaluation/generated/test-Concurrency-ef307bc6ef04e8c1ea843231db58e3afaafa9fa6/build_logs/7/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:83:29: error: ‘const class clang::CallExpr’ has no member named ‘getOriginExpr’
   83 |   if (LockCall && LockCall->getOriginExpr()) {
      |                             ^~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:85:31: error: ‘const class clang::CallExpr’ has no member named ‘getOriginExpr’
   85 |     if (ExprHasName(LockCall->getOriginExpr(), "spin_lock_irqsave", C))
      |                               ^~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
